--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <section>
             <input type="text" id="texto-tarefa">
-            <button id="criar-tarefas"></button>
+            <button id="criar-tarefa"></button>
         </section>
         <section>
             <ol id="lista-tarefas"></ol>
