adiciona soluçao dos requisitos 5 e 6.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </section>
         <section id="box-list cont" class='container-box-right'>
            
-            <button id="apaga-tudo"></button>
+            <button id="apaga-tudo">apaga-tudo</button>
         </section>
     </main>
     <aside>
