--- a/index.html
+++ b/index.html
@@ -16,22 +16,27 @@
         <section id="container-box-left">
             <input type="text" id="texto-tarefa" placeholder="adicione sua tarefa">  
             <button id="criar-tarefa">Criar tarefa</button>
-            <ol id="lista-tarefas">Lista de tarefas</ol>
+            <section>
+                <ol id="lista-tarefas">Lista de tarefas</ol>
+            </section>
         </section>
+
+
         <section id="box-list cont" class='container-box-right'>
-        
-            <button id="apaga-tudo">apaga-tudo</button>
+
+            <aside>
+                <section id="box-button-right" >
+                <button id="apaga-tudo">apaga-tudo</button>
+                <button id="mover-cima">mover para cima</button>
+                <button id="mover-baixo">mover para baixo</button>
+                <button id="remover-finalizados">remove finalizados</button>
+                <button id="remover-selecionado">remove selecionados</button>
+                <button id="salvar-tarefas">salvar-tarefas</button>
+                </section>
+            </aside>
         </section>
     </main>
-    <aside>
-        <section id="box-button-right" >
-        <button id="mover-cima">mover para cima</button>
-        <button id="mover-baixo">mover para baixo</button>
-        <button id="remover-finalizados">remove finalizados</button>
-        <button id="remover-selecionado">remove selecionados</button>
-        <button id="salvar-tarefas">salvar-tarefas</button>
-        </section>
-    </aside>
+   
     
 </body>
 <script src="script.js"></script>
