numero 13 com a ajuda das pessoas amigas Kamila Hydalgo, Lucas Lisboa, Gustavo Mathias

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <input type="text" id="texto-tarefa" placeholder="adicione sua tarefa">  
             <button id="criar-tarefa">Criar tarefa</button>
             <section>
-                <ol id="lista-tarefas">Lista de tarefas</ol>
+                <h3>Lista de tarefas</h3>
+                <ol id="lista-tarefas"></ol>
             </section>
         </section>
 
@@ -36,7 +37,6 @@
             </aside>
         </section>
     </main>
-   
     
 </body>
 <script src="script.js"></script>
